# COL781-a2-Mesh-Processing

./: .gitignore  CMakeLists.txt  README.md  impcmd.txt
src/: e1.cpp  e2.cpp  e3.cpp  e4.cpp  e5.cpp  e6.cpp  e7.cpp  e8.cpp  e9.cpp  example.cpp  mesh.cpp  mesh.hpp
